--- a/.babelrc
+++ b/.babelrc
@@ -12,5 +12,10 @@
     }],
     "react"
   ],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": ["react-hot-loader/babel"],
+  "env": {
+    "test": {
+      "plugins": ["transform-es2015-modules-commonjs"]
+    }
+  }
 }
