--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.3",
     "eslint": "^3.19.0",
+    "eslint-loader": "^1.7.1",
     "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
